# easy_os

./: .gdbinit  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  qemu_runner.sh  rust-toolchain.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs  sig.rs  syscall_id.rs
easy_fs/: Cargo.toml
easy_fs/src/: bitmap.rs  cache.rs  efs.rs  layout.rs  lib.rs  vfs.rs
kernel/: Cargo.toml  build.rs
kernel/src/: batch.rs  common.rs  config.rs  console.rs  logger.rs  main.rs  memory.rs  sbi.rs  sync.rs  test_utils.rs  timer.rs
kernel/src/drivers/: mod.rs  virtio_blk.rs
kernel/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
kernel/src/memory/: frame_allocator.rs  heap_allocator.rs  map_area.rs  memory_space.rs  mod.rs  page_table.rs
kernel/src/memory/address/: mod.rs  phys.rs  virt.rs
kernel/src/proc/: cpu.rs  ctx.rs  kernel_stack.rs  loader.rs  manager.rs  mod.rs  pcb.rs  pid.rs  switch.S  switch.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs
kernel/src/trap/: mod.rs  trap.S  trap_frame.rs
syscall_id/: Cargo.toml
syscall_id/src/: lib.rs
user_lib/: Cargo.toml  build.rs
user_lib/src/: common.rs  console.rs  lib.rs  syscall.rs  test_utils.rs
